--- a/snippetbox/ui/html/footer.partial.html
+++ b/snippetbox/ui/html/footer.partial.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{{define "footer"}}
+    <footer>Powered by <a href="https://golang.org/">Go</a></footer>
+{{end}}
