--- a/snippetbox/ui/html/base.layout.html
+++ b/snippetbox/ui/html/base.layout.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img width="10%" src="../static/img/arSdXF.png" alt="">
         <h1><a href="/">Snippetbox</a></h1>
     </header>
     <nav>
